@@ -3,10 +3,10 @@ package de.pnp.manager.server.database;
 import static de.pnp.manager.server.database.UniverseRepository.DATABASE_NAME;
 
 import com.mongodb.client.result.DeleteResult;
-import de.pnp.manager.component.user.PnPGrantedAuthority;
+import de.pnp.manager.component.user.GrantedUniverseAuthority;
 import de.pnp.manager.component.user.PnPUserDetails;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.support.MessageSourceAccessor;
@@ -14,7 +14,9 @@ import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.query.Criteria;
 import org.springframework.data.mongodb.core.query.Query;
 import org.springframework.security.authentication.BadCredentialsException;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.SpringSecurityMessageSource;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -51,11 +53,19 @@ public class UserDetailsRepository implements UserDetailsService {
     }
 
     /**
+     * Gets all usernames.
+     */
+    public Collection<String> getAllUsernames() {
+        return mongoTemplate.findAll(PnPUserDetails.class, REPOSITORY_NAME).stream().map(PnPUserDetails::getUsername)
+            .toList();
+    }
+
+    /**
      * Inserts the user into the database.
      */
-    public void addNewUser(String username, String password, Collection<PnPGrantedAuthority> authorities) {
+    public void addNewUser(String username, String password, Collection<? extends GrantedAuthority> authorities) {
         mongoTemplate.insert(
-            new PnPUserDetails(username, passwordEncoder.encode(password), authorities, true, true, true, true, false),
+            new PnPUserDetails(username, passwordEncoder.encode(password), authorities, true, true, true, true),
             REPOSITORY_NAME);
     }
 
@@ -63,10 +73,7 @@ public class UserDetailsRepository implements UserDetailsService {
      * Inserts the user into the database.
      */
     public void addNewAdmin(String username, String password) {
-        mongoTemplate.insert(
-            new PnPUserDetails(username, passwordEncoder.encode(password), Collections.emptyList(), true, true, true,
-                true, true),
-            REPOSITORY_NAME);
+        addNewUser(username, password, List.of(new SimpleGrantedAuthority("ROLE_ADMIN")));
     }
 
     /**
@@ -79,21 +86,21 @@ public class UserDetailsRepository implements UserDetailsService {
                 .getMessage("AbstractUserDetailsAuthenticationProvider.badCredentials", "Bad credentials"));
         }
         mongoTemplate.findAndReplace(Query.query(Criteria.where("_id").is(username)),
-            new PnPUserDetails(username, passwordEncoder.encode(newPassword), userDetails.getPnPAuthorities(),
+            new PnPUserDetails(username, passwordEncoder.encode(newPassword), userDetails.getAuthorities(),
                 userDetails.isAccountNonExpired(), userDetails.isAccountNonLocked(),
-                userDetails.isCredentialsNonExpired(), userDetails.isEnabled(), userDetails.isAdmin()),
+                userDetails.isCredentialsNonExpired(), userDetails.isEnabled()),
             REPOSITORY_NAME);
     }
 
     /**
-     * Updates the {@link PnPGrantedAuthority authorities} of the user.
+     * Updates the {@link GrantedUniverseAuthority authorities} of the user.
      */
-    public void updateGrantedAuthority(String username, Collection<PnPGrantedAuthority> newAuthorities) {
+    public void updateGrantedAuthority(String username, Collection<GrantedAuthority> newAuthorities) {
         PnPUserDetails userDetails = loadUserByUsername(username);
         mongoTemplate.findAndReplace(Query.query(Criteria.where("_id").is(username)),
             new PnPUserDetails(username, userDetails.getPassword(), newAuthorities,
                 userDetails.isAccountNonExpired(), userDetails.isAccountNonLocked(),
-                userDetails.isCredentialsNonExpired(), userDetails.isEnabled(), userDetails.isAdmin()),
+                userDetails.isCredentialsNonExpired(), userDetails.isEnabled()),
             REPOSITORY_NAME);
     }
 
